# formspec

./: .gitignore  CLAUDE.md  CODE-SMELL-AUDIT-2026-05-17.md  COMPLETED.md  CONTRIBUTING.md  Cargo.toml  FORMSPEC-FEATURE-MATRIX.md  Makefile  README.md  TODO.md  filemap.json  package-lock.json  package.json  pyproject.toml  vitest.config.storybook.ts
.github/workflows/: ci.yml  docs-check.yml
.storybook/: main.ts
benchmarks/: test_benchmark_harness.py
crates/formspec-canonical/: Cargo.toml
crates/formspec-canonical/src/: lib.rs
crates/formspec-changeset/src/: graph.rs
crates/formspec-core/: Cargo.toml
crates/formspec-core/src/: assembly_fel_rewrite.rs  changelog.rs  fel_analysis.rs  fel_rewrite_exact.rs  json_artifacts.rs  lib.rs  option_sets.rs  path_utils.rs  response_migration.rs  value_coerce.rs  wire_keys.rs
crates/formspec-cross-stack-fixture-harness/: Cargo.toml
crates/formspec-cross-stack-fixture-harness/src/: canonicalization_vectors.rs  lib.rs
crates/formspec-cross-stack-fixture-harness/tests/: bundle_manifest_tests.rs  cbor_canonical_parity.rs
crates/formspec-eval/: README.md
crates/formspec-eval/src/: convert.rs  eval_json.rs  eval_options.rs  fel_json.rs  lib.rs  nrb.rs  pipeline.rs  screener_eval.rs
crates/formspec-eval/tests/: screener_validity.rs
crates/formspec-lint/: Cargo.toml
crates/formspec-lint/docs/rustdoc-md/: API.md
crates/formspec-lint/schemas/: intake-handoff.schema.json  mapping.schema.json  response.schema.json
crates/formspec-lint/src/: dependencies.rs  expressions.rs  extensions.rs  lib.rs  lint_json.rs  metadata.rs  pass_response.rs  references.rs  schema_validation.rs  tree.rs  types.rs
crates/formspec-lint/src/pass_component/: check_duplicate_bind.rs  check_input_compat.rs  check_layout_bind.rs  check_options_source.rs  check_params.rs  check_textinput_variant.rs  check_unknown.rs  classification.rs  custom_cycles.rs  field_lookup.rs  mod.rs  tests.rs  walk.rs
crates/formspec-lint/src/pass_theme/: mod.rs  tests.rs  token_refs.rs  token_registry.rs  value_validators.rs
crates/formspec-py/: Cargo.toml
crates/formspec-py/src/: convert.rs  document.rs  fel.rs  mapping.rs  native_tests.rs
crates/formspec-signature-adapter-ring/: Cargo.toml
crates/formspec-signature-adapter-ring/src/: lib.rs
crates/formspec-signature-adapter-ring/tests/fixtures/: rsa-test-key.pkcs8
crates/formspec-signature-adapter-ring/tests/fixtures/golden-vectors/: ecdsa-p256-sha256.json  rsa-pss-sha256.json
crates/formspec-signature-cose/: Cargo.toml
crates/formspec-signature-cose/src/: lib.rs
crates/formspec-signature-port/: Cargo.toml
crates/formspec-signature-port/src/: lib.rs
crates/formspec-wasm/: Cargo.toml  README.md
crates/formspec-wasm/src/: document.rs  evaluate.rs  fel.rs  lib.rs  mapping.rs  split_abi.rs  wasm_tests.rs
docs/: changelog.html  component-spec.html  extension-registry.html  fel-grammar.html  mapping.html  spec.html  theme-spec.html
examples/: README.md
examples/grant-application/: README.md  definition.json  registry.json
examples/references/: package.json  serve.py
examples/signature-attestation/: wos-signature-affirmation.mapping.json
examples/signature-attestation/fixtures/: signed.response.json
examples/uswds-grant/: package.json
registries/: signature-method-registry.json
schemas/: fel-functions.schema.json  mapping.schema.json  posture-declaration.schema.json  respondent-ledger-event.schema.json  respondent-ledger.schema.json  response.schema.json  signature-method-registry.schema.json  verification-receipt.schema.json
scripts/: copy-layout-css-assets.mjs  generate-component-schema-props.mjs  generate-lint-codes.mjs  spec-artifacts.config.json
specs/: lint-codes.json
specs/assist/: assist-spec.md
specs/audit/: respondent-ledger-spec.md
specs/component/: component-spec.md
specs/core/: intake-handoff-spec.llm.md  response-spec.llm.md  spec.md
specs/mapping/: mapping-spec.bluf.md  mapping-spec.llm.md  mapping-spec.md  mapping-spec.semantic.md
specs/registry/: changelog-spec.md  extension-registry.md  signature-method-registry.md
specs/screener/: screener-spec.md
specs/theme/: theme-spec.md
src/formspec/: _rust.py  registry.py  respondent_ledger.py  validate.py
src/formspec/fel/: errors.py
src/formspec/validate/: __init__.py  __main__.py  cli.py  discovery.py  lint_common.py  models.py  orchestrator.py  reporting.py
stories/_shared/: IsolatedWebComponentStory.tsx
tests/conformance/: fel-function-semantics.json  test_fel_function_semantics.py
tests/conformance/fuzzing/: test_signature_method_uri_fail_closed.py
tests/conformance/schemas/: test_mapping_schema.py  test_respondent_ledger_schema.py  test_response_schema.py
tests/conformance/spec/: test_cross_spec_contracts.py
tests/e2e/browser/: clinical-intake.spec.ts
tests/fixtures/: fixture-microgrant-screener.json
tests/fixtures/cross-stack/: manifest.schema.json
tests/fixtures/lint/: E900-signed-payload-response-id-mismatch.json  E902-signed-payload-definition-version-mismatch.json
tests/fixtures/signature-method-uri-fail-closed/: receipt-on-response.json  sig-on-receipt.json  unknown-exact.json  unknown-prefix.json
tests/fixtures/signature-responses/: digest-mismatch.response.json  missing-signing-intent.response.json  valid-cosignature.response.json  (+4 more)
tests/unit/: test_definition_evaluator.py  test_fel_evaluator.py  test_lint_rule_registry.py  test_registry.py  test_rust_bridge.py  test_signed_response_fixture.py  test_validator_schema.py
thoughts/: README.md  TODO.csv  TODO.md
thoughts/adr/: 0054-companion-constraint-intersection.md  0055-single-ownership-per-concern-role-purity.md  0056-closed-schemas-extension-registry-as-sole-open-seam.md  0057-mapping-semantic-lint-and-contract-projection-analysis.md  0058-ontology-semantic-lint.md  0059-references-semantic-lint.md  0060-locale-semantic-lint.md
thoughts/archive/: README.md
thoughts/research/: 2026-03-17-form-deployment-options.md  2026-03-23-formspec-frame-data-science-layer.md
thoughts/specs/: 2026-05-19-ui-schema.md
(+94 files in other folders)
