[workspace]
members = [
    "crates/formspec-changeset",
    "crates/formspec-core",
    "crates/formspec-cross-stack-fixture-harness",
    "crates/formspec-eval",
    "crates/formspec-lint",
    "crates/formspec-py",
    "crates/formspec-signature-adapter-ring",
    "crates/formspec-signature-cose",
    "crates/formspec-signature-port",
    "crates/formspec-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
