[package]
name = "formspec-canonical"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec canonicalization helper — constructs canonical signed-payload bytes and computes digest (no crypto deps)"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
