[package]
name = "formspec-cross-stack-fixture-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-stack fixture bundle harness — walks D4 bundles and asserts manifest validity"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
jsonschema = { version = "0.45", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
