[package]
name = "formspec-cross-stack-fixture-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-stack fixture bundle harness — walks D4 bundles and asserts manifest validity"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
integrity-canonical = { path = "../../../integrity-stack/crates/integrity-canonical" }
integrity-bundle-fixtures = { path = "../../../integrity-stack/crates/integrity-bundle-fixtures" }
serde_json = "1"

[dev-dependencies]
base64 = "0.22"
ciborium = "0.2"
formspec-signature-adapter-ring = { path = "../formspec-signature-adapter-ring" }
formspec-signature-cose = { path = "../formspec-signature-cose" }
formspec-signature-port = { path = "../formspec-signature-port" }
integrity-cbor = { path = "../../../integrity-stack/crates/integrity-cbor", features = ["json"] }
jsonschema = { version = "0.45", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
