[package]
name = "formspec-signature-cose"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec COSE_Sign1 decode helpers for signature adapters"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
integrity-cose = { path = "../../../integrity-stack/crates/integrity-cose" }
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }

[dev-dependencies]
