[package]
name = "formspec-signature-port"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec signature verifier port — Verifier trait, VerificationReceipt, and registry types (no crypto deps)"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1"
