[package]
name = "formspec-signature-port"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec signature verifier port — Verifier trait, VerificationReceipt, and registry types (no crypto deps)"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
integrity-signature = { path = "../../../integrity-stack/crates/integrity-signature" }
